2006-12-11  Josh Stone  <joshua.i.stone@intel.com>

	* parse.cxx (parse::parse_literal): Enforce the lower bound on
	negative literals.

2006-12-11  David Smith  <dsmith@redhat.com>

	* hash.cxx (find_hash): Fixed a caching bug.  Bulk mode (relayfs)
	status should be figured into the hash since it changes the
	generated C code.

2006-12-08  Josh Stone  <joshua.i.stone@intel.com>

	PR 3681.
	* staptree.h (struct vardecl): Add a literal 'init' member for the
	initialization value of globals.
	* staptree.cxx (vardecl::vardecl): Initialize 'init' to NULL.
	(vardecl::print): Print global init value during pass-1 output.
	* main.cxx (printscript): Print global init values during verbose
	pass-2 output.
	* parse.cxx (parser::parse_global): Set the initialization literal of
	global vardecls.
	* translate.cxx (var::init): Don't unconditionally override the value
	of numeric globals when the module_param isn't used.
	(c_unparser::emit_global_param): Write numeric module_params directly
	into the global variable, as an int64_t instead of long.
	(c_unparser::emit_global): Add initialization to global declarations.
	Don't create a temp module_param long for numeric globals anymore.

2006-12-07  Josh Stone  <joshua.i.stone@intel.com>

	PR 3624.
	* tapsets.cxx (struct be_derived_probe): Add a new priority parameter
	for begin/end probes, and a comparison function for sorting.
	(be_builder::build): Parse the priority & pass it to be_derived_probe.
	(be_derived_probe_group::emit_module_init, emit_module_exit): Sort the
	probe list by priority before emitting any code.
	(register_standard_tapsets): Add new begin/end variants.
	* parse.cxx (parser::parse_literal): Allow negative numeric literals,
	by checking for a '-' unary operator right before a number.
	* stapprobes.5.in: Document the new begin/end syntax.

2006-12-06  Josh Stone  <joshua.i.stone@intel.com>

	PR 3623.
	* tapsets.cxx (timer_derived_probe_group::emit_module_decls): Restart